--- a/README.Rmd
+++ b/README.Rmd
@@ -128,7 +128,8 @@ dat <- read_excel(path)
 init <- initScenario(coefTable = dat,
                      uValue = 2,
                      optimisticRule = "expectation", 
-                     # optimistic contribution of each indicator directly defined by their average 
+                     # optimistic contribution of each indicator directly defined
+                     # by their average 
                      fixDistance = NA) 
                      # 3 is the default
 ```
@@ -142,7 +143,8 @@ In line with Gosling et al. (2020), we chose the expected value of the indicator
 result <- solveScenario(x = init)
 
 # Visualize the farm composition
-result$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1 : 6) %>% 
+result$landUse %>% gather(key = landCoverOption,
+                          value = landCoverShare, 1 : 6) %>% 
   mutate(portfolio = "Optimal farm composition",
          landCoverShare = landCoverShare * 100) %>% 
   ggplot(aes(y = landCoverShare, x = portfolio, fill = landCoverOption)) + 
@@ -228,7 +230,8 @@ result_current <- solveScenario(x = init,
 
 performance_current <- calcPerformance(result_current)
 
-performance_current$scenarioTable$performance <- performance_current$scenarioTable$performance * 100
+performance_current$scenarioTable$performance <-
+  performance_current$scenarioTable$performance * 100
 ```
 
 ```{r, message=FALSE, warning=FALSE}
@@ -311,7 +314,8 @@ Alley cropping does not appear in any portfolio at any uncertainty level. Alley 
 The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analyzed by either excluding or adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so, individual and independent optimizations are carried out in- and excluding different (sets of) indicators. The set of indicators considered is representative for the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how stakeholders' preferences design the land-cover compositions. The following code exemplifies optimizations for three subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides straightforward functionality to define sets of indicators with a single click. Further explanation and instructions are given in the app.
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
-dat_socioeconomic <- dat[dat$indicator != "Protecting soil resources" & dat$indicator !="Protecting water supply",]
+dat_socioeconomic <- dat[!dat$indicator %in% c("Protecting soil resources",
+                                              "Protecting water supply"),]
 
 init_socioeconomic <- initScenario(dat_socioeconomic,
                                    uValue = 2,
@@ -320,7 +324,8 @@ init_socioeconomic <- initScenario(dat_socioeconomic,
 
 result_socioeconomic <- solveScenario(x = init_socioeconomic)
 
-result_socioeconomic$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1 : 6) %>% 
+result_socioeconomic$landUse %>% gather(key = landCoverOption,
+                                        value = landCoverShare, 1 : 6) %>% 
   mutate(portfolio = "Socio-economic",
          landCoverShare = landCoverShare * 100) %>% 
   ggplot(aes(y = landCoverShare, x = portfolio, fill = landCoverOption)) + 
