--- a/README.Rmd
+++ b/README.Rmd
@@ -162,7 +162,7 @@ result$landUse %>% gather(key = landCoverOption,
 
 *Fig. 2: Composition of the optimized farm (based on data of Gosling et al. (2020)), including all indicators. Each land-cover option is shown in an allocated share (%).*
 
-The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best contributes to all 10 indicators (i.e. the multi-functional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives (and their weights) currently drive farmer's land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
+The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best contributes to all 10 indicators (i.e. the multifunctional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives (and their weights) currently drive farmer's land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
 
 ### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
 
@@ -198,7 +198,7 @@ ggplot(performance$scenarioTable,
 
 *Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al (n.d.)).*
 
-Fig. 3 can be used to further explore the effects of the indicators on the modeled land-use decisions. Looking at the performances of this multi-functional farm reveals, which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
+Fig. 3 can be used to further explore the effects of the indicators on the modeled land-cover decisions. Looking at the performances of this multifunctional farm reveals, which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
 
 Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio is apparently driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ of the portfolio is defined by these 3 indicators. A full list with performances of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
 
@@ -267,7 +267,7 @@ ggplot(performance_current$scenarioTable,
 
 Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for comparing and evaluating the differences of the optimized land-cover composition with the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ provides objective measure how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also fall off in the optimized portfolio when compared to the current land-cover composition.
 
-Amounting to 0.387, the guaranteed performance of the multi-functional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multi-functional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multi-functional portfolio therefore does not promise immediate economic success for the farmers.
+Amounting to 0.387, the guaranteed performance of the multifunctional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multifunctional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multifunctional portfolio therefore does not promise immediate economic success for the farmers.
 
 <h3><a name="6. Erweiterte Anwendung">4. Sophisticated application</a></h3>
 
@@ -343,7 +343,7 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption,
 
 *Fig. 6: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only socio-economic indicators. Each land-cover option is shown in an allocated share (%).*
 
-The first example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). The result corresponds to the above shown multi-functional portfolio (Fig. 2). This is expected, as all indicators relevant to the solution of the multi-functional portfolio (financial stability, investment costs, and meeting household needs) are also captured in the socio-economic bundle.
+The first example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). The result corresponds to the above shown multifunctional portfolio (Fig. 2). This is expected, as all indicators relevant to the solution of the multifunctional portfolio (financial stability, investment costs, and meeting household needs) are also captured in the socio-economic bundle.
 
 ```{r}
 performance_socioeconomic <- calcPerformance(result_socioeconomic)
@@ -382,7 +382,7 @@ ggplot(performance_socioeconomic$scenarioTable,
 
 *Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
 
-An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multi-functional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multi-functional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
+An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_ecologic <- dat[dat$indicator %in% c("Protecting soil resources",
@@ -447,7 +447,7 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
 
 *Fig. 9: Composition of the optimized farm (based on data of Gosling et al. (2020)), including the prospective relevant indicators of the farmers only. Each land-cover option is shown in an allocated share (%).*
 
-The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio reflects the portfolio observed in Eastern Panama best. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multi-functional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators key elements when promoting landscape development toward multi-functional landscapes.
+The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio reflects the portfolio observed in Eastern Panama best. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators key elements when promoting landscape development toward multifunctional landscapes.
 
 ### The use of fixDistance
 
@@ -490,7 +490,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 10: Theoretically ideal farm compositions using the fixDistance argument and increasing levels of uncertainty.*
 
-It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multi-functional scenario shown above (Fig. 2). The here broadened state space leads a higher share of pasture under low uncertainty levels as compared to the multi-functional portfolio above (Fig. 5).
+It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multifunctional scenario shown above (Fig. 2). The here broadened state space leads a higher share of pasture under low uncertainty levels as compared to the multifunctional portfolio above (Fig. 5).
 
 <h3><a name="7. Suggested">5. Suggested citation </a></h3>
 
