--- a/README.Rmd
+++ b/README.Rmd
@@ -29,9 +29,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <h3><a name="1. Einleitung">1. Introduction</a></h3>
 
-When managing ecosystems the question is how to simultaneously combat biodiversity loss and maintain ecosystem functioning while increasing human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
+When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
-The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide and tools for deeper understanding and visualizing the contributions of the distinct indicators. The method has been developed and applied in a series of studies before. You find some examples in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g. be found in Knoke et al. (2016) and Husmann et al. (n.d). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a quick idea of its functionalities and the modeling philosophy of the overall approach, see <http://134.76.17.50/optimlanduse_shiny/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
+The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g., be found in Knoke et al. (2016) and Husmann et al. (n.d). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to faciliate the usage of the package, see <http://134.76.17.50/optimlanduse_shiny/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
 
 <h3><a name="3. Input und Output">2. Detailed Description of the Functions’ In- and Outputs</a></h3>
 
